Fix height issue on tablet view of article section

--- a/my-react-portfolio/src/components/ArticleCard/ArticleCard.css
+++ b/my-react-portfolio/src/components/ArticleCard/ArticleCard.css
@@ -53,7 +53,7 @@
 
   .article-card-image-container {
     width: 12.5rem;
-    height: 100%;
+    min-height: 100%;
     align-self: stretch;
     object-position: top;
   }
